# idiomatic

./: .dockerignore  .gitignore  ARCHITECTURE.md  AUDIT_2026_07.md  CLAUDE.md  DASHBOARD.md  Dockerfile  HANDOFF_FRONTEND.md  README.md  pyproject.toml  render.yaml
db/: schema.sql  seeds.sql
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  api.ts  format.ts  hooks.ts  styles.css
frontend/src/components/: AudioButton.tsx  Layout.tsx  charts.tsx  ui.tsx
frontend/src/pages/: Channels.tsx  Delivery.tsx  ExpressionDetail.tsx  Expressions.tsx  Login.tsx  Overview.tsx  VideoDetail.tsx  Videos.tsx
idiomatic/: __init__.py  api.py  backfill.py  backfill_context.py  backfill_v2.py  cron.py  db.py  gemini.py  langs.py  oxylabs_client.py  retts.py  settings.py  ui_api.py  worker.py  youtube.py
idiomatic/pipeline/: __init__.py  apkg.py  audio.py  connectives.py  dedup.py  explain.py  extract.py  pool.py
tools/: local_align.py
