[project]
name = "idiomatic"
version = "0.1.0"
description = "YouTube → Anki idiom-deck cloud worker"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.30",          # postgres
    "httpx>=0.27",            # async HTTP for Gemini, RSS
    "feedparser>=6.0",        # YouTube channel RSS
    "genanki>=0.13",          # apkg packaging
    "tenacity>=8.5",          # retry decorators
    "pydantic>=2.7",          # config + DTOs
    "pydantic-settings>=2.4", # env-driven settings
    "python-slugify>=8.0",
    "structlog>=24.4",        # structured logging
    "uvloop>=0.20",           # faster event loop
    "fastapi>=0.115",         # web service for agent pull
    "uvicorn[standard]>=0.30",# ASGI server
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"
